# drf_intro

./: .gitignore  pyproject.toml
app/: db.sqlite3
app/app/: api.py  settings.py  urls.py
app/rental/: api_views.py  models.py
app/rental/migrations/: 0001_initial.py
